# ComputationalSpatialHumanities

./: .env.example  .gitignore  BRAINSTORM.md  CLAUDE.md  LEIPZIG_OPEN_DATA_API_DOCUMENTATION.md  README.md  dataset_categories.json  dataset_contracts.json  dataset_families.json  election_definitions.json  indicator_catalog.json  leipzig_all_datasets_first5_records.json  leipzig_all_datasets_metadata.json  leipzig_datasets.csv  leipzig_open_data_first_look.ipynb  openDataDatasets.py  party_registry.json
.inventory/: geo.txt  geo_props.txt  (+3 more)
backend/: Dockerfile  pyproject.toml
backend/src/api/: auth.py  cache.py  config.py  db.py  main.py  profiling.py  spectrum.py  telegram_approval.py
backend/tests/: test_registration_approval.py  test_spectrum.py
etl/: Dockerfile  pyproject.toml
etl/scripts/: generate_dataset_categories.py  generate_dataset_families.py  generate_election_definitions.py  generate_indicator_catalog.py
etl/src/: boundaries.py  cache_bump.py  config.py  db.py  etl_state.py  notifier.py  pipeline.py  scheduler.py  telegram_bot.py
etl/src/domains/: __init__.py  elections.py
etl/src/extractors/: base.py  csv_extractor.py  excel_extractor.py  geojson_extractor.py  gtfs_extractor.py  json_extractor.py  shapefile_extractor.py  statistik_transform.py  xml_extractor.py  zip_extractor.py
etl/src/loaders/: postgres.py
etl/tests/: test_geo_features_sweep.py  test_geojson_reproject.py  test_http_resilience.py  test_registration_callbacks.py  test_traffic_restrictions_sweep.py
etl/tests/fixtures/: park_ride_lastrecord.json  radverkehr_standorte.json
(+92 files in other folders)
