[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "leipzig-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
    "psycopg[binary,pool]>=3.1",
    "email-validator>=2.2",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "bcrypt<5",
    "python-dotenv>=1.0",
    "orjson>=3.10",
    "redis>=5.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
